feat：删除NL2SQL代码